change ui for env text field (replace browse button by extension), and make it closer to idea